# StackPerf

./: .coderabbit.yaml  .env.example  .gitignore  .opensymphony.after_create.json  .pr-body.md  .pre-commit-config.yaml  AGENTS.md  EVIDENCE.md  EVIDENCE_COE-296.md  EVIDENCE_COE-297.md  EVIDENCE_COE-298.md  EVIDENCE_COE-309.md  EVIDENCE_COE-310.md  EVIDENCE_COE-311.md  EVIDENCE_COE-312.md  EVIDENCE_COE-313.md  EVIDENCE_COE-314.md  EVIDENCE_COE-315.md  EVIDENCE_COE-316.md  EVIDENCE_COE-320.md  EVIDENCE_COE305.md  FINAL_VALIDATION_REPORT.md  HANDOFF_INSTRUCTIONS.md  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_COE-299.md  README.md  WORKFLOW.md  WORKPAD.md  WORKPAD_COE-299.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  validate_implementation.py  workpad.md  workpad_COE-307.md
.agents/skills/: custom-codereview-guide.md
.agents/skills/commit/: SKILL.md
.agents/skills/convert-tasks-to-linear/: SKILL.md
.agents/skills/create-implementation-plan/: SKILL.md
.agents/skills/debug/: SKILL.md
.agents/skills/land/: SKILL.md
.agents/skills/linear/: SKILL.md
.agents/skills/pull/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ai-pr-review.yml  ci.yml  secret-scan.yml
.opensymphony/: conversation.json  issue.json  run.json
.opensymphony/openhands/: create-conversation-request.json  last-conversation-state.json
.opensymphony/prompts/: last-continuation-prompt.md  last-full-prompt.md
configs/experiments/: fireworks-kimi-k2-5-harness-comparison.yaml  fireworks-openhands-model-comparison.yaml  fireworks-terminal-agents-comparison.yaml  fireworks-terminal-agents.yaml  provider-comparison.yaml
configs/harnesses/: claude-code.yaml  codex.yaml  openai-cli.yaml  opencode.yaml  openhands.yaml  test-harness.yaml
configs/litellm/: README.md  VALIDATION.md  config.yaml  litellm.yaml
configs/postgres/: init.sql
configs/prometheus/: prometheus.yml
configs/providers/: anthropic.yaml  fireworks-openai.yaml  fireworks.yaml  openai.yaml
configs/task-cards/: auth-analysis.yaml  repo-analysis.yaml  repo-auth-analysis.yaml
configs/usage-policies/: default.yaml
configs/variants/: fireworks-glm-5-claude-code.yaml  fireworks-glm-5-openhands.yaml  fireworks-kimi-claude-code.yaml  fireworks-kimi-k2-5-claude-code.yaml  fireworks-kimi-k2-5-claude.yaml  fireworks-kimi-k2-5-opencode.yaml  fireworks-kimi-k2-5-openhands.yaml  openai-gpt-4o-cli.yaml  openai-gpt-5.4-cli.yaml  openai-gpt-5.4-codex.yaml
docs/: ai-pr-review-human-setup.md  architecture.md  benchmark-methodology.md  config-and-contracts.md  data-model-and-observability.md  launch-recipes.md  m1-sessionless-contracts.md  operator-workflow.md  phase-1-foundation.md  phase-2-data-storage.md  phase-3-session-management.md  phase-4-collection-normalization.md  phase-5-reporting-dashboards.md  phase-6-security-operations.md  phase-7-documentations-polish.md  references.md  security-and-operations.md  sessionless-linear-mapping.md  sessionless-plan.md
docs/decisions/: adr-001-sessionless-usage-storage.md  adr-002-api-key-attribution-and-redaction.md
docs/tasks/: README.md  implementation-plan.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  03e22a58f3a7_initial_schema_providers_harness_.py  20260326_210252_add_session_notes_outcome_and_artifact_experiment.py  2f2ee53388a2_add_proxy_credentials_table.py  359fff0c443a_add_usage_requests_table.py  b356c861829f_add_proxy_keys_table.py
scripts/: capture_grafana_screenshots.py  create_workpad.py  demo_collector.py  demo_comparison.py  demo_config_loading.py  demo_credential_service.py  demo_end_to_end.py  demo_security.py  demo_session_service.py  init_benchmark_seed.py  linear_client.py  linear_helper.py  unblock-commit.sh  validation_demo.py  verify_db_schema.py  verify_normalization.py
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/benchmark_core/: __init__.py  config.py  config_loader.py  git.py  models.py  repositories.py  repositories_abc.py  security.py  services.py  services_abc.py
src/benchmark_core/config/: __init__.py  base.py  experiment.py  experiments.py  harness.py  harnesses.py  provider.py  providers.py  task_card.py  task_cards.py  variant.py  variants.py
src/benchmark_core/db/: __init__.py  connection.py  models.py  repositories.py  session.py
src/benchmark_core/models/: __init__.py  artifact.py  session.py
src/cli/: __init__.py  config.py  diagnose.py  main.py  session.py
src/collectors/: __init__.py  litellm_collector.py  metric_catalog.py  normalization.py  normalize_requests.py  normalizer.py  prometheus_collector.py  retention_cleanup.py  rollup_job.py  rollups.py
src/reporting/: __init__.py  comparison.py  export_service.py  queries.py  serialization.py
src/stackperf/: __init__.py
tests/: __init__.py  conftest.py  test_imports.py
tests/integration/: __init__.py  conftest.py  test_cli_flow.py  test_compose.py  test_migrations.py  test_request_repository.py  test_retention_cleanup.py  test_rollups.py  test_session_service.py  test_smoke.py
tests/unit/: __init__.py  test_api.py  test_artifact_commands.py  test_benchmark_core.py  test_cli.py  test_cli_key_commands.py  test_collectors.py  test_common_services.py  test_config.py  test_config_models.py  test_config_yaml_validation.py  test_credential_service.py  test_credentials.py  test_db.py  test_diagnostics.py  test_diagnostics_service.py  test_export_commands.py  test_export_service.py  test_git.py  test_health_service.py  test_imports.py  test_litellm_collector.py  test_models.py  test_normalize_requests.py  test_proxy_key_service.py  test_redaction.py  test_renderer.py  test_rendering.py  test_reporting.py  test_repositories.py  test_retention.py  test_retention_cleanup.py  test_rollup_repository.py  test_rollups.py  test_security.py  test_services.py  test_session_commands.py  test_session_lifecycle.py  test_spend_log_fixtures.py  test_usage_policy_config.py
tests/validation/: __init__.py  test_collectors.py  test_config_validation.py  test_dashboard_assets.py  test_migrations.py
(+90 files in other folders)
